--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
 <meta name="twitter:title" content="KotaSpin Daftar Situs Slot Server Luar Negeri Tergacor">
 <meta name="twitter:description" content="KotaSpin Situs Slot Server Luar Negeri Terpercaya dan Tergacor, buruan daftar dan raih kemenangan maksimal hanya bersama situs kami. WD dijamin dibayar lunas. Dengan banyaknya situs-situs penipuan / phising yang beredar belakangan ini, kami sebagai Situs Resmi KotaSpin ingin mengingatkan Anda untuk lebih berhati-hati j">
 
-    <a href="https://palembangtour.com" rel="dofollow">https://palembangtour.com</a>
-<a href="https://thenewportship.com" rel="dofollow">https://thenewportship.com</a>
-<a href="https://naikvespa.com" rel="dofollow">https://naikvespa.com</a>
-<a href="https://officecomsetupp.uk" rel="dofollow">https://officecomsetupp.uk</a>
-<a href="https://arena-gaming.com" rel="dofollow">https://arena-gaming.com</a>
-
+    
     <script src="//44a1f1-9d.myshopify.com/cdn/shop/t/1/assets/constants.js?v=58251544750838685771710921818" defer="defer"></script>
     <script src="//44a1f1-9d.myshopify.com/cdn/shop/t/1/assets/pubsub.js?v=158357773527763999511710921819" defer="defer"></script>
     <script src="//44a1f1-9d.myshopify.com/cdn/shop/t/1/assets/global.js?v=37284204640041572741710921818" defer="defer"></script><script src="//44a1f1-9d.myshopify.com/cdn/shop/t/1/assets/animations.js?v=88693664871331136111710921817" defer="defer"></script><script>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script><meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/69277974748/digital_wallets/dialog">
@@ -885,6 +880,18 @@ for (var attr in meta) {
     });
   }
 })();</script>
+
+    <div style="display:none">
+
+<a href="https://palembangtour.com/" rel="dofollow">https://palembangtour.com/</a>
+<a href="https://thenewportship.com/" rel="dofollow">https://thenewportship.com/</a>
+<a href="https://naikvespa.com/" rel="dofollow">https://naikvespa.com/</a>
+<a href="https://officecomsetupp.uk/" rel="dofollow">https://officecomsetupp.uk/</a>
+<a href="https://arena-gaming.com/" rel="dofollow">https://arena-gaming.com/</a>
+<a href="http://69.57.162.66/" rel="dofollow">http://69.57.162.66/</a>
+
+</div>
+    
 </head>
 
   <body class="gradient">
